--- a/index.html
+++ b/index.html
@@ -3,40 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Hands-On</title>
+    <title>A Importância do Esporte</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- Cabeçalho fixo -->
     <div class="cabecalho-fixo">
-        <h1>Cabeçalho Fixo</h1>
+        <h1>Esporte é Vida</h1>
     </div>
 
     <div class="conteudo">
-        <h2 class="titulo-sticky">Título Sticky</h2>
-        <p>Texto de exemplo para gerar rolagem na página.</p>
-        <p>Mais texto para rolagem...</p>
-        <p>Continue rolando...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
+        <h2 class="titulo-sticky">Benefícios do Esporte</h2>
+
+        <p>O esporte é fundamental para manter a saúde física e mental.</p>
+        <p>Praticar atividades físicas regularmente melhora a circulação e fortalece os músculos.</p>
+        <p>Além dos benefícios físicos, o esporte ajuda a reduzir o estresse e a ansiedade.</p>
+        <p>Participar de esportes coletivos desenvolve habilidades sociais e trabalho em equipe.</p>
+        <p>O esporte também promove disciplina, foco e persistência.</p>
+        <p>Atividades físicas ajudam a controlar o peso e prevenirem doenças.</p>
+        <p>Esportes ao ar livre conectam o indivíduo com a natureza e aumentam o bem-estar.</p>
+        <p>Jogos e treinos em grupo incentivam a amizade e a cooperação.</p>
+        <p>Praticar esporte desde cedo ajuda na formação de hábitos saudáveis.</p>
+        <p>Esporte competitivo ensina a lidar com vitórias e derrotas de forma equilibrada.</p>
+        <p>Participar de atividades físicas melhora a autoestima e a confiança.</p>
+        <p>Exercícios regulares aumentam a resistência física e a energia diária.</p>
+        <p>O esporte ajuda no desenvolvimento da coordenação motora e reflexos.</p>
+        <p>Atividades físicas podem ser divertidas e educativas ao mesmo tempo.</p>
+        <p>Incentivar a prática esportiva contribui para uma sociedade mais saudável.</p>
 
         <div class="container-relativo">
-            <p>Este é um container relativo.</p>
-            <div class="modal-absoluto">Modal Absoluto</div>
+            <p>Dica:</p>
+
+            <div class="modal-absoluto">Nunca comece sem aquecimento!</div>
         </div>
 
-        <p>Mais conteúdo abaixo...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
+        <p>O esporte é uma ferramenta de inclusão social e combate ao sedentarismo.</p>
+        <p>Atividades físicas ajudam a melhorar a concentração nos estudos e no trabalho.</p>
+        <p>Praticar esportes promove equilíbrio emocional e redução da tensão.</p>
+        <p>Esportes de equipe estimulam a liderança e o espírito de grupo.</p>
+        <p>O esporte é essencial para desenvolver hábitos saudáveis de vida.</p>
+        <p>Participar de atividades físicas ajuda a prevenir problemas de postura.</p>
+        <p>Exercícios regulares aumentam a longevidade e a qualidade de vida.</p>
+        <p>O esporte é um aliado no combate à obesidade infantil e adulta.</p>
+        <p>Atividades físicas proporcionam momentos de lazer e diversão.</p>
+        <p>O esporte transforma a saúde física, mental e social do indivíduo.</p>
     </div>
 
-    <!-- Botão voltar ao topo -->
     <a href="#" class="voltar-topo">Voltar ao Topo</a>
 
 </body>
 </html>
- 
